Fixed sold out banner and img spacing

--- a/app/assets/stylesheets/media_queries.scss
+++ b/app/assets/stylesheets/media_queries.scss
@@ -30,11 +30,7 @@
   div.product-details-index{
     height: 23%;
   }
-  p#price-index{
-    font-size: 80%;
-    margin-bottom: 0.3em;
-  }
-  p#title-index{
+  p#price-index, p#title-index{
     font-size: 80%;
     margin-bottom: 0.3em;
   }
@@ -96,11 +92,7 @@
   div.product-details-index{
     height: 13%;
   }
-  p#price-index{
-    font-size: 90%;
-    margin-bottom: 1em;
-  }
-  p#title-index{
+  p#price-index, p#title-index{
     font-size: 90%;
     margin-bottom: 1em;
   }
